--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
         <link rel="stylesheet" href="./styles.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="style.css">
+        <!-- <script src="jquery.js"></script>  -->
+        <!-- <script> 
+        $(function(){
+          $("#includedContent").load("navbar.html"); 
+        });
+        </script>  -->
     </head>
-    <body class="text-center" action="">
-        <form class="form-signin">
+    <body class="text-center">
+        <form class="form-signin" action="dragNdrop.html">
           <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
           <label for="inputEmail" class="sr-only">Email address</label>
           <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
