Updated navbar dropdown

--- a/navbar.html
+++ b/navbar.html
@@ -1,16 +1,24 @@
-    <nav class="">
-            <ul class="">
-              <li class="">
-                <a class="" aria-current="page" href="#">Cognida.ai</a>
-              </li>
-              <li class="">
-                <a class="" href="#">Upload</a>
-              </li>
-              <li class="">
-                <a class="" href="lists.html">List</a>
-              </li>
-              <li class="">
-                <a class="" href="#">Profile</a>
-              </li>
-            </ul>
-      </nav>
+<nav class="">
+    <ul class="">
+      <li class="">
+        <a class="" aria-current="page" href="#">Cognida.ai</a>
+      </li>
+      <li class="">
+        <a class="" href="#">Upload</a>
+      </li>
+      <li class="">
+        <a class="" href="lists.html">List</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Profile
+        </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Username</a></li>
+          <li><a class="dropdown-item" href="#">Log-in Time</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="./index.html">Log-out</a></li>
+        </ul>
+      </li>
+    </ul>
+</nav>
