--- a/navbar.html
+++ b/navbar.html
@@ -1,10 +1,74 @@
+<style>
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #1b1b32;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  
+  input:checked + .slider {
+    background-color: black;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  #logo{
+    height: 5vh;
+  }
+  </style>
+  
 <nav class="">
     <ul class="">
       <li class="">
-        <a class="" aria-current="page" href="#">Cognida.ai</a>
+        <a class="" aria-current="page" href="#">
+          <img id="logo" src="https://cognida.ai/images/cognida_logo_white.png" alt="">
+        </a>
       </li>
       <li class="">
-        <a class="" href="#">Upload</a>
+        <a class="" href="./dragNdrop.html">Upload</a>
       </li>
       <li class="">
         <a class="" href="lists.html">List</a>
