--- a/dragNdrop.html
+++ b/dragNdrop.html
@@ -30,7 +30,7 @@
     <div class="drag-area">
       <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
       <header>Drag & Drop to Upload File</header>
-      <span>OR</span>
+      <span></span>
       <button>Browse File</button>
       <input type="file" hidden />
     </div>
@@ -52,7 +52,9 @@
 
       </script>
     <script type="module" src="dragndrop.js"></script>
-    <input class="fileName" placeholder="Enter File Name" type="text" />
-<button class="submitBtn">Submit</button>
+    <br>
+    <input id="fileName" class="fileName" placeholder="Enter File Name" type="text" />
+
+<button id="submitBtn" class="submitBtn">Submit</button>
   </body>
 </html>
