--- a/dataset.html
+++ b/dataset.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataset</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"
+      integrity="sha512-SGWgwwRA8xZgEoKiex3UubkSkV1zSE1BS6O4pXcaxcNtUlQsOmOmhVnDwIvqGRfEmuz83tIGL13cXMZn6upPyg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -19,16 +25,26 @@
     <script>
 
         $(function () {
+            var d
             itemJsonArrayStr = localStorage.getItem('itemsJson')
             itemJsonArray = JSON.parse(itemJsonArrayStr);
-            // const ind = localStorage.getItem('index')
-            // console.log(ind, typeof ind)
-            // var d = itemJsonArray[ ind - 1].file1
-            // console.log(itemJsonArray)
-            // var stock = [];
+            const ind = parseInt(JSON.parse(localStorage.getItem('index')))
+            console.log(ind, typeof ind)
+            if(itemJsonArray[ind-1].fileType === 'text/csv') {
+                Papa.parse(itemJsonArray[ind - 1].file1, {
+                    download: true,
+                    header: true,
+                    complete: function async (res) {
+                        d = res.data
+                        console.log(res.data)
+                    }
+                })
+            }
+            else
+                d = itemJsonArray[ind - 1].file1
 
             $.getJSON('../UserLists.json', function (data) {
-                    // data = d
+                    data = d
                     var tblHead = ""
                     for(let j = 0; j < Object.keys(data[0]).length; j++) {
                         tblHead = tblHead + "<th>" + Object.keys(data[0])[j] + "</th>" 
