--- a/dragNdrop.html
+++ b/dragNdrop.html
@@ -24,7 +24,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="dragNdrop.css" />
-    <!-- <link rel="import" href="/navbar.html" /> -->
+    <!-- <link rel="import" href="navbar.html" /> -->
   </head>
   <body>
     <div class="nav-container">
@@ -33,7 +33,7 @@
       <script>
         $(function () {
           
-          $("#nav-placeholder").load("/dragNdrop/navbar.html");
+          $("#nav-placeholder").load("../navbar.html");
         });
       
       </script>
