--- a/dragNdrop.html
+++ b/dragNdrop.html
@@ -32,8 +32,7 @@
 
       <script>
         $(function () {
-          
-          $("#nav-placeholder").load("../navbar.html");
+          $("#nav-placeholder").load("../dragNdrop/navbar.html");
         });
       
       </script>
