--- a/dragNdrop.html
+++ b/dragNdrop.html
@@ -32,7 +32,7 @@
 
       <script>
         $(function () {
-          $("#nav-placeholder").load("../dragNdrop/navbar.html");
+          $("#nav-placeholder").load("https://eekshitchawla.github.io/dragNdrop/navbar.html");
         });
       
       </script>
